<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/buscar_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar_produto"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buscar_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar_nome"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/digite_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digite_nome"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:onClick="onClick"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/buscar_nome"
        app:layout_constraintTop_toTopOf="@id/buscar_nome" />

    <Button
        android:id="@+id/button_buscar_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:textSize="12sp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/button_color"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>